<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_open"
        android:icon="@drawable/ic_action_open"
        android:title="@string/menu_open_url"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_tips"
        android:icon="@drawable/ic_action_tips"
        android:title="@string/action_tips"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_export"
        android:title="@string/menu_export"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_import"
        android:title="@string/menu_import"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_exit"
        android:icon="@drawable/ic_action_exit"
        android:title="@string/menu_exit"
        app:showAsAction="ifRoom"/>

</menu>